--- a/Diary/Base.lproj/Main.storyboard
+++ b/Diary/Base.lproj/Main.storyboard
@@ -353,6 +353,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="NLT-hG-hE6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Syf-Im-cuP">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
