--- a/Diary/Base.lproj/Main.storyboard
+++ b/Diary/Base.lproj/Main.storyboard
@@ -93,7 +93,7 @@
         <!--일기 작성-->
         <scene sceneID="Udn-5y-py1">
             <objects>
-                <viewController id="ppt-yp-Vfb" customClass="WriteDiaryViewController" customModule="Diary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WriteDiaryViewController" id="ppt-yp-Vfb" customClass="WriteDiaryViewController" customModule="Diary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nxn-QO-EKv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
